# ubu-store

./: .gitignore  CHANGELOG.md  CODEGEN.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  codegen-task.yml  contract-change.yml  design-sync.yml
.github/workflows/: ci.yml
docs/: PHASE1_STORE_CONTRACT.md
examples/: admit_task.rs  init_store.rs
migrations/: 0001_initial.sql
src/: admission.rs  compartment_gate.rs  db.rs  errors.rs  lib.rs  migrations.rs  provenance_gate.rs  queries.rs  recalculation.rs  replay.rs  transactions.rs
src/api/: admission.rs  mod.rs  query.rs  store.rs
src/models/: calendar_record.rs  external_reference_record.rs  log_record.rs  mod.rs  object_record.rs  plan_record.rs  projection_record.rs  task_record.rs  worker_submission_record.rs
tests/: admission_invariants.rs  admit_object.rs  append_log.rs  compartment_gate.rs  external_reference.rs  init_store.rs  plan_calendar.rs  recalculation_trigger.rs  reject_invalid_object.rs  reject_prefix_type_mismatch.rs  replay_state.rs  task_duration_estimate.rs  universe_state.rs
